# conan-config

./: README.md  profiles_generate.py  remotes.txt  settings.yml
cmake/: conan-cmake-integration.cmake
config/: conan.conf
hooks/: attribute_checker.py
profiles/: cortex-m4-freertos-eabi-gcc  cortex-m4-freertos-eabi-gcc.debug  cortex-m4-freertos-eabi-gcc.minsizerel  cortex-m4-freertos-eabi-gcc.release  cortex-m4-freertos-eabi-gcc.relwithdebinfo  cortex-m4-none-eabi-gcc  cortex-m4-none-eabi-gcc.debug  cortex-m4-none-eabi-gcc.minsizerel  cortex-m4-none-eabi-gcc.release  cortex-m4-none-eabi-gcc.relwithdebinfo  cortex-m4.debug  cortex-m4.release  cortex-m7-freertos-eabi-gcc  cortex-m7-freertos-eabi-gcc.debug  cortex-m7-freertos-eabi-gcc.minsizerel  cortex-m7-freertos-eabi-gcc.release  cortex-m7-freertos-eabi-gcc.relwithdebinfo  cortex-m7-none-eabi-gcc  cortex-m7-none-eabi-gcc.debug  cortex-m7-none-eabi-gcc.minsizerel  cortex-m7-none-eabi-gcc.release  cortex-m7-none-eabi-gcc.relwithdebinfo  cortex-m7.debug  cortex-m7.release  freertos-cortex-m4  freertos-cortex-m4.debug  freertos-cortex-m7.debug  freertos-cortex-m7.release
profiles/arch/: cortex-m4  cortex-m7
profiles/build_type/: debug  minsizerel  none  release  relwithdebinfo
profiles/cpu/: cortex-m4  cortex-m7
profiles/os/: freertos  none
templates/: gcc  gcc_cpu
templates/command/new/headersOnly/: CMakeLists.txt  bitbucket-pipelines.yml  conanfile.py
templates/command/new/headersOnly/cmake/: packagemanager.cmake
templates/command/new/headersOnly/test/: IncludesTest.cpp
templates/command/new/headersOnly/test_package/: test.cpp
templates/command/new/headersWithSources/: .gitignore  CMakeLists.txt  bitbucket-pipelines.yml  conanfile.py  getChannel.py
templates/command/new/headersWithSources/inc/: DumpFile_please_replace_it_with_proper_source_files.hpp
templates/command/new/headersWithSources/src/: DumpFile_please_replace_it_with_proper_source_files.cpp
templates/command/new/headersWithSources/test_package/: CMakeLists.txt  conanfile.py  test.cpp
templates/headersOnly/: .gitignore  CMakeLists.txt
templates/headersOnly/test_package/: CMakeLists.txt  test.cpp
templates/headersWithSources/: conanfile.py
templates/headersWithSources/src/: DumpFile_please_replace_it_with_proper_source_files.cpp
templates/headersWithSources/test_package/: test.cpp
